2004-04-04  Pino Toscano <toscano.pino@tiscali.it>

	* Now Kig can save icon information of every macro.

	* Some work on types dialog: icon of every type is now visible,
	and made a sort of skeleton to modify type's data.

	* Made buttons of some dialogs like other KDE dialogs ones
	  (with icons and correct alignment).

	* Kig now ask the user when exporting type(s) to an already
	existant file.

	* Some i18n fixes

2004-04-02  Dominique Devriese  <devriese@kde.org>

	* Implement the point-on-curve checking.  The code should work,
	but the objects using it cannot be built yet.

2004-03-28  Dominique Devriese  <devriese@kde.org>

	* Add some non-functional code for point-on-curve checking.

2004-03-28  Pino Toscano <toscano.pino@tiscali.it>

	* Add point styles

	* Some i18n fixes

	* More work on the DrGeo import filter

2004-03-27  Dominique Devriese  <devriese@kde.org>

	* Apply a patch by Albert Astals Cid <tsdgeos@terra.es> that gives
	focus to the text input on first opening the text dialog.
	Closes:78409.

	* Fix a translation issue with internal macro's.

	* Make a TextImp transformable by simply transforming its
	location, and showing the text label in that location again
	(Closes: 78407 ).

2004-03-26  Pino Toscano <toscano.pino@tiscali.it>

	* Implemented a popup menu submenu for changing the line style of
	an object.
	
	* Various i18n fixes

2004-03-15  Dominique Devriese  <devriese@kde.org>

	* misc/coordinate_system.cpp: add a simple "Invisible" Coordinate
	system, showing no axes or grid at all.

2004-03-10  Dominique Devriese  <devriese@kde.org>

	* Don't mess up the order of given objects in a macro
	construction.

2004-03-09  Dominique Devriese  <devriese@kde.org>

	* Fix the macro system to reject macro's where not all of the
	given objects are used.

	* Fix the macro system to properly check whether the final objects
	depend on the given objects, and fix a problem with the wrong
	object being selected as the final object in some rare cases.
