@@ -27,7 +27,6 @@
 #include "../misc/guiaction.h"
 
 #include <kfiledialog.h>
-#include <kicondialog.h>
 #include <kiconloader.h>
 #include <kmessagebox.h>
 #include <kpushbutton.h>
@@ -38,6 +37,7 @@
 #include <qfile.h>
 #include <qtextstream.h>
 #include <qstringlist.h>
+#include <qpixmap.h>
 
 #include <vector>
 #include <algorithm>
@@ -45,20 +45,35 @@
 TypesDialog::TypesDialog( QWidget* parent, const KigDocument& doc )
   : TypesDialogBase( parent, "types_dialog", true ), mdoc( doc )
 {
-  KIconLoader* l = KGlobal::iconLoader();
-  buttonHelp->setIconSet( QIconSet( l->loadIcon( "help", KIcon::Small ) ) );
-  buttonOk->setIconSet( QIconSet( l->loadIcon( "button_ok", KIcon::Small ) ) );
-  buttonRemove->setIconSet( QIconSet( l->loadIcon( "editdelete", KIcon::Small ) ) );
+  // improving GUI look'n'feel...
+  il = KGlobal::iconLoader();
+  buttonHelp->setIconSet( QIconSet( il->loadIcon( "help", KIcon::Small ) ) );
+  buttonOk->setIconSet( QIconSet( il->loadIcon( "button_ok", KIcon::Small ) ) );
+  buttonRemove->setIconSet( QIconSet( il->loadIcon( "editdelete", KIcon::Small ) ) );
+
+  typeList->setColumnWidth( 0, 22 );
+  typeList->setColumnWidth( 1, 140 );
+  typeList->setColumnWidth( 2, 240 );
 
   // loading macros...
   typedef MacroList::vectype vec;
   const vec& macros = MacroList::instance()->macros();
-  for ( vec::const_iterator i = macros.begin(); i != macros.end(); ++i )
+  for ( vec::const_reverse_iterator i = macros.rbegin(); i != macros.rend(); ++i )
   {
-    typeList->insertItem( new MacroListElement( *i ) );
+    typeList->insertItem( newListItem( *i ) );
   };
-  typeIcon->setIcon( "gear" );
-  typeIcon->setEnabled( false );
+}
+
+QListViewItem* TypesDialog::newListItem( Macro* m )
+{
+  MacroListElement* e = new MacroListElement( typeList, m );
+  QCString ifn = m->action->iconFileName();
+  if ( !ifn.isNull() )
+  {
+    QPixmap p = il->loadIcon( ifn, KIcon::Small );
+    e->setPixmap( 0, p );
+  }
+  return e;
 }
 
 TypesDialog::~TypesDialog()
@@ -78,16 +93,17 @@ void TypesDialog::okSlot()
 
 void TypesDialog::deleteType()
 {
-  std::vector<QListBoxItem*> items;
+  std::vector<QListViewItem*> items;
   std::vector<Macro*> selectedTypes;
-  for( QListBoxItem* i = typeList->firstItem(); i; i = i->next() )
-  {
-    if (i->isSelected())
+  QListViewItemIterator it( typeList );
+  while ( it.current() ) {
+    if ( ( it.current() )->isSelected() )
     {
-      selectedTypes.push_back(static_cast<MacroListElement*>(i)->getMacro());
-      items.push_back(i);
-    };
-  };
+      items.push_back( it.current() );
+      selectedTypes.push_back( static_cast<MacroListElement*>( it.current() )->getMacro() );
+    }
+    ++it;
+  }
   if (selectedTypes.empty()) return;
   if (selectedTypes.size()==1)
   {
@@ -105,11 +121,11 @@ void TypesDialog::deleteType()
 	 i18n("Are you sure?"),
 	 i18n("Continue"),
 	 "deleteTypeWarning") == KMessageBox::Cancel ) return;
-  for ( std::vector<QListBoxItem*>::iterator i = items.begin(); i != items.end(); ++i)
+  for ( std::vector<QListViewItem*>::iterator i = items.begin(); i != items.end(); ++i)
   {
-    int appel = typeList->index(*i);
+    int appel = typeList->itemIndex(*i);
     assert (appel != -1);
-    typeList->removeItem(appel);
+    delete *i;
   };
   for ( std::vector<Macro*>::iterator j = selectedTypes.begin();
         j != selectedTypes.end(); ++j)
@@ -119,11 +135,14 @@ void TypesDialog::deleteType()
 void TypesDialog::exportType()
 {
   std::vector<Macro*> types;
-  for (QListBoxItem* i = typeList->firstItem(); i; i = i->next())
-  {
-    if (i->isSelected())
-      types.push_back(static_cast<MacroListElement*>(i)->getMacro());
-  };
+  QListViewItemIterator it( typeList );
+  while ( it.current() ) {
+    if ( ( it.current() )->isSelected() )
+    {
+      types.push_back( static_cast<MacroListElement*>( it.current() )->getMacro() );
+    }
+    ++it;
+  }
   if (types.empty()) return;
   QString file_name = KFileDialog::getSaveFileName(":macro", i18n("*.kigt|Kig Types Files\n*|All Files"));
   if ( file_name.isNull() )
@@ -156,41 +175,33 @@ void TypesDialog::importTypes()
   MacroList::instance()->add( macros );
 
   for ( uint i = 0; i < macros.size(); ++i )
-    typeList->insertItem( new MacroListElement( macros[i] ) );
+    typeList->insertItem( newListItem( macros[i] ) );
 }
 
 void TypesDialog::selectionChangedSlot()
 {
+/*
   int nselected = 0;
   int lastselected = -1;
   int current = -1;
-  for( QListBoxItem* i = typeList->firstItem(); i; i = i->next() )
-  {
+  QListViewItemIterator it( typeList );
+  while ( it.current() ) {
     current++;
-    if (i->isSelected())
+    if ( ( it.current() )->isSelected() )
     {
       nselected++;
       lastselected = current;
     }
+    ++it;
   }
   typedef MacroList::vectype vec;
   const vec& macros = MacroList::instance()->macros();
-  if ( nselected == 1 )
-  {
-//    typeIcon->setEnabled( true );
-    typeIcon->setIcon( macros[lastselected]->action->iconFileName() );
-  }
-  else
-  {
-    typeIcon->setIcon( "gear" );
-//    typeIcon->setEnabled( false );
-  }
-  
+*/
 }
 
+/*
 void TypesDialog::iconChangedSlot()
 {
-/*
   int nselected = 0;
   int lastselected = -1;
   int current = -1;
@@ -220,12 +231,21 @@ void TypesDialog::iconChangedSlot()
 
   typeList->removeItem( lastselected );
   typeList->insertItem( new MacroListElement( macros[i] ), lastselected );
-*/
 
 }
+*/
 
-MacroListElement::MacroListElement( Macro* m )
-  : QListBoxText( m->action->descriptiveName() ),
+void TypesDialog::executed( QListViewItem* /* i */ )
+{
+  // TODO
+  // create a new ui where the user can edit the current type. A simple
+  // interface is needed, with two edit boxes (to modify name and
+  // description) and a KIconButton (to modify icon).
+  // See the TODO in the comment above...
+}
+
+MacroListElement::MacroListElement( KListView* lv, Macro* m )
+  : QListViewItem( lv, QString::null, m->action->descriptiveName(), m->action->description() ),
     macro( m )
 {
 }
